Implemented QuizController Unit Testing